home-k8s/apps/trilium/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trilium
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: trilium
  replicas: 1
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: trilium
    spec:
      automountServiceAccountToken: false
      hostUsers: false
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: Always
        runAsNonRoot: true
      containers:
        - name: trilium
          image: triliumnext/trilium:stable
          # At the time the rootless image is not available, so we need to skip the startpoint that uses su.
          command: ["node", "./main.cjs"]
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          volumeMounts:
            - name: trilium
              mountPath: /home/node/trilium-data
      volumes:
        - name: trilium
          persistentVolumeClaim:
            claimName: trilium
      # We want this deployment on a specific node
      nodeSelector:
        kubernetes.io/hostname: home-k8s01.sigurs.io
