home-k8s/apps/trilium/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trilium
spec:
  selector:
    app.kubernetes.io/name: trilium
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: http
