home-k8s/apps/trilium/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
spec:
  podSelector: {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
spec:
  podSelector: {}
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-ingress
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: traefik
        podSelector:
          matchLabels:
            app.kubernetes.io/name: traefik
      ports:
        - port: 8080
# ---
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: allow-dns-from-outside
# spec:
#   podSelector: {}
#   policyTypes:
#     - Ingress
#   ingress:
#     - from:
#         - ipBlock:
#             cidr: 0.0.0.0/0
#       ports:
#         - port: 8053
#           protocol: TCP
#         - port: 8053
#           protocol: UDP
# ---
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: allow-access-to-internet
# spec:
#   podSelector: {}
#   policyTypes:
#     - Egress
#   ingress: []
#   egress:
#     - to:
#         - ipBlock:
#             cidr: 0.0.0.0/0
#             except:
#               - 0.0.0.0/8
#               - 10.0.0.0/8
#               - 100.64.0.0/10
#               - 127.0.0.0/8
#               - 169.254.0.0/16
#               - 172.16.0.0/12
#               - 192.0.0.0/24
#               - 192.0.2.0/24
#               - 192.88.99.0/24
#               - 192.168.0.0/16
#               - 198.18.0.0/15
#               - 198.51.100.0/24
#               - 203.0.113.0/24
#               - 224.0.0.0/4
#               - 233.252.0.0/24
#               - 240.0.0.0/4
#               - 255.255.255.255/32
